<resources>
    <string name="app_name">Curb</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="arrangement">个人主页</string>
    <string name="my_collection">我的收藏</string>
    <string name="concerned_topic">关注的话题</string>
    <string name="group_dynamics">小组动态</string>

    <string name="information">拾资讯</string>
    <string name="river">探镜像</string>
    <string name="smallData">攒数据</string>
    <string name="scholat">学者网</string>

    <string name="remind">我的提醒</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>

    <string name="noUserName">游客</string>


    <string name="info_filter_all">所有信息</string>
    <string name="info_filter_education">教务管理</string>
    <string name="info_filter_scholar">学者网</string>
    <string name="info_filter_work_study">勤工助学</string>
    <string name="info_filter_practice">实习招聘</string>
    <string name="info_nothing">no information</string>
    <string name="info_loading_error">Error while loading information</string>
    <string name="info_detail_loading">LOADING</string>
    <string name="info_detail_missed">Message Lost</string>
    <string name="info_image_description">information type</string>
    <string name="info_no_new_info_error">have not new information</string>

    <string name="add_info_title">标题：</string>
    <string name="add_info_content">内容：</string>
    <string name="add_info_time">时间：</string>
    <string name="add_info_address">地址：</string>
    <string name="add_info_belong">类别：</string>
    <string name="add_info_unit">单位：</string>
    <string name="add_info_commit">提交</string>


    <!-- Strings related to login -->
    <string name="prompt_email">ID</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_title">login</string>
    <string name="string_info_add">发布新信息</string>

    <string name="sd_commit_button">Finish</string>
    <string name="sd_loading_new_SD">loading latest small data</string>
    <string name="sd_loading_old_SD">loading older small data</string>
    <string name="sd_loading_created_details_error">loading created details failed</string>
    <string name="sd_loading_created_summaries_error">loading created summaries failed</string>
    <string name="sd_loading_details_error">loading details failed</string>
    <string name="sd_loading_summaries_error">loading summaries failed</string>
    <string name="sd_loading_results_error">loading results failed</string>
    <string name="sd_create_small_data">创建问卷</string>
    <string name="sd_check_created_small_data">创建的问卷</string>


    <!--
       lifumin
       2018-03-23
       注册模块：用户名,Log In,
       -->
    <!-- Strings related to register -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Sign up</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_register_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="information_notification_title_template">Information: %1$s</string>

    <string name="notification_info_channel_id">CurbInformationNotification</string>
    <string name="notification_info_channel_name">资讯通知</string>
    <string name="notification_info_channel_description">用于资讯功能的消息推送</string>
    <string name="notification_scholat_channel_id">CurbScholatNotification</string>
    <string name="notification_scholat_channel_name">学者网通知</string>
    <string name="notification_scholat_channel_description">未完成作业的消息推送</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!--userProfile-->
    <string name="user_profile_nickname">昵称</string>
    <string name="user_profile_account">账号</string>
    <string name="user_profile_scholat">学者网账号</string>
    <string name="user_profile_logout">退出登录</string>
    <string name="user_profile_login">用户登陆</string>

    <!--setScholat-->
    <string name="user_profile_scholat_account">账号</string>
    <string name="user_profile_scholat_psw">密码</string>
    <string name="user_profile_scholat_confirm">确认</string>

    <!--Reminder-->
    <string name="reminder_no_reminders">没有添加任何提醒</string>
    <string name="reminder_delete_reminder">删除本条</string>

</resources>
