<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_item_first"
        android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_arrange"
            android:icon="@drawable/ic_nav_icon_arrange"
            android:title="@string/arrangement" />-->
        <!-- <item
             android:id="@+id/nav_my_collection"
             android:icon="@drawable/ic_nav_icon_collection"
             android:title="@string/my_collection" />-->
        <!--  <item
              android:id="@+id/nav_concerned_topic"
              android:icon="@drawable/ic_nav_icon_my_remind"
              android:title="@string/concerned_topic" />-->
        <!--    <item
                android:id="@+id/group_dynamic"
                android:icon="@drawable/ic_nav_icon_group_dynamics"
                android:title="@string/group_dynamics" />-->

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_nav_icon_information"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_river"
            android:icon="@drawable/ic_nav_icon_river"
            android:title="@string/river" />
        <item
            android:id="@+id/nav_small_data"
            android:icon="@drawable/ic_nav_icon_small_data"
            android:title="@string/smallData" />
        <item
            android:id="@+id/nav_scholat"
            android:icon="@drawable/ic_filter_scholar"
            android:title="@string/scholat" />
        <item
            android:id="@+id/nav_remind"
            android:icon="@drawable/ic_nav_icon_my_remind"
            android:title="@string/remind" />
        <!-- <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_nav_icon_share"
             android:title="@string/share" />-->
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_nav_icon_newsetting"
            android:title="@string/setting" />
    </group>

</menu>
